give more space in sales order display view